tests/typing/fail/new_init_fail3.rb

class A
  def initialize(x)
    x.foo
  end

end

A.new(3)

